--- a/config_test.yml
+++ b/config_test.yml
@@ -1,3 +1,5 @@
 first : 'the_worst'
 second : 'the_best'
 third : 'the_hairy_chest'
+server_url : 'http://your_server.example.com'
+development_computer_url : 'http://localhost:3000/payments/ipn'
