--- a/config_test.yml
+++ b/config_test.yml
@@ -8,11 +8,11 @@ development_computer_url : 'http://localhost:3000/payments/ipn'
 
 polling_interval_seconds : '5.0'
 
-sandbox_id : [1.1.1.1.1, 0.10.0.0]
+sandbox_id : ['my_sandbox_id','my_sandbox_id_1']
 
 map:
-  'gpmac_1231902686_biz@paypal.com': '1.1.1.1.1.1'
-  'paypal@gmail.com': '0.1.0.1.0.1'
+  'gpmac_1231902686_biz@paypal.com': 'my_sandbox_id'
+  'paypal@gmail.com': 'my_sandbox_id_1'
 
 computer_testing:
   'my_sandbox_id': false
