--- a/config_test.yml
+++ b/config_test.yml
@@ -25,3 +25,15 @@ ipn_response:
 queue_map:
   'my_sandbox_id': ~
   'my_sandbox_id_1': ~
+
+last_poll_time :
+  'my_sandbox_id': ~
+  'my_sandbox_id_1': ~
+
+email_map :
+  'my_sandbox_id': dmitri.ostapenko@gmail.com
+  'my_sandbox_id_1': bob@example.com
+
+unexpected_poll_time :
+  'my_sandbox_id': ~
+  'my_sandbox_id_1': ~
