--- a/config_test.yml
+++ b/config_test.yml
@@ -34,6 +34,6 @@ email_map :
   'my_sandbox_id': dmitri.ostapenko@gmail.com
   'my_sandbox_id_1': bob@example.com
 
-unexpected_poll_time :
+unexpected_poll_checker_instance :
   'my_sandbox_id': ~
   'my_sandbox_id_1': ~
