--- a/config_test.yml
+++ b/config_test.yml
@@ -8,7 +8,9 @@ development_computer_url : 'http://localhost:3000/payments/ipn'
 
 polling_interval_seconds : '5.0'
 
-poll_checking_interval_seconds : '3600.0'
+poll_checking_interval_seconds : '.3'
+
+no_polling_time_before_email : 3600
 
 sandbox_id : ['my_sandbox_id','my_sandbox_id_1']
 
@@ -31,3 +33,4 @@ email_map :
 poll_checker_instance :
   'my_sandbox_id': ~
   'my_sandbox_id_1': ~
+
