cukes all removed

--- a/config_test.yml
+++ b/config_test.yml
@@ -12,6 +12,8 @@ poll_checking_interval_seconds : '.1'
 
 no_polling_time_before_email : 3600
 
+no_ipn_time_before_email : 1
+
 sandbox_id : ['my_sandbox_id','my_sandbox_id_1']
 
 computer_testing:
@@ -33,4 +35,10 @@ email_map :
 poll_checker_instance :
   'my_sandbox_id': ~
   'my_sandbox_id_1': ~
+
+ipn_reception_checker_instance :
+  'my_sandbox_id': ~
+  'my_sandbox_id_1': ~
+
+
 
