--- a/config_test.yml
+++ b/config_test.yml
@@ -11,6 +11,8 @@ no_ipn_time_before_email : 600
 
 sandbox_id : ['my_sandbox_id','my_sandbox_id_1']
 
+developers_email : 'developers@hedgeye.com'
+
 computer_testing:
   'my_sandbox_id': false
   'my_sandbox_id_1': false
