--- a/config_test.yml
+++ b/config_test.yml
@@ -11,7 +11,8 @@ no_ipn_time_before_email : 600
 
 sandbox_id : ['my_sandbox_id','my_sandbox_id_1']
 
-developers_email : 'developers@hedgeye.com'
+#developers_email : 'developers@hedgeye.com'
+developers_email : 'ssmith@hedgeye.com'
 
 computer_testing:
   'my_sandbox_id': false
